--- a/application/index/view/index/sceneryDetail.html
+++ b/application/index/view/index/sceneryDetail.html
@@ -73,9 +73,11 @@
                         {/if}
                         {/volist}
                         <input type="hidden" name="gname" value="{$scenerys['gd_title']}">
+                        <input type="hidden" name="bid" value="{$bid}">
 
 
-                  <div class="col-md-6">
+
+                        <div class="col-md-6">
                       <div class="gt_shop_detail_banner">
                           <h4>{$scenerys['gd_title']}</h4>
                           <div class="gt_shop_rating_wrap">
