--- a/application/admin/view/order/cancel.html
+++ b/application/admin/view/order/cancel.html
@@ -42,7 +42,7 @@
                                 <td style="text-align: center">{$v['o_num']}</td>
                                 <td style="text-align: center">{$v['o_total']}</td>
                                 <td style="text-align: center">
-                                    <a href="{:url('admin/busorder/showdetail',['aid'=>$v['o_aid']])}" class="btn btn-info btn-sm">查看详细信息</a>
+                                    <a href="{:url('admin/busorder/showdetail',['aid'=>$v['o_uid']])}" class="btn btn-info btn-sm">查看详细信息</a>
                                     <!--<button class="btn btn-success btn-sm">转为待发货</button>-->
                                 </td>
                             </tr>
