--- a/application/index/view/index/foodDetail.html
+++ b/application/index/view/index/foodDetail.html
@@ -69,6 +69,7 @@
                             {/if}
                         {/volist}
                         <input type="hidden" name="gname" value="{$foods['gd_title']}">
+                        <input type="hidden" name="bid" value="{$bid}">
                   <div class="col-md-6">
                       <div class="gt_shop_detail_banner">
                           <h4>{$foods['gd_title']}</h4>
