--- a/application/index/view/index/hotelBook.html
+++ b/application/index/view/index/hotelBook.html
@@ -41,6 +41,7 @@
                     <input type="hidden" name="cid" value="{$data['cid']}">
                         <!--商品图片-->
                     <input type="hidden" name="photo" value="{$data['photo']}">
+                        <input type="hidden" name="bid" value="{$bid}">
                         <h4 class="h4">{$data['gname']}</h4>
                         <hr>
                         <h5>预订信息</h5>
