--- a/public/static/app/index/css/templatemo-style.css
+++ b/public/static/app/index/css/templatemo-style.css
@@ -590,7 +590,7 @@ figure.effect-ruby:hover img {
 	.grid-item {
 		padding-left: 10px;
 		padding-right: 10px;
-		width: 50%;
+		/*width: 50%;*/
 	}
 
 	.gallery-two .grid-item,
