--- a/application/admin/view/carousel/index.html
+++ b/application/admin/view/carousel/index.html
@@ -50,14 +50,14 @@
                         {volist name="list" id="v" key="k"}
                         <tr>
                             <td align="center" valign="middle">{$k}</td>
-                            <td align="center" valign="middle"><img data-toggle="modal" data-target="#myModal" src="/uploads/{$v.pic}" width="60px"></td>
+                            <td align="center" valign="middle"><img data-toggle="modal" data-target="#myModal" show-id='{$v.id}' class='find-btn' src="/uploads/{$v.pic}" width="60px"></td>
                             <td align="center" valign="middle">
-                                <textarea name="" id="" cols="40" rows="1" placeholder="图片覆盖层描述信息">{$v.desc}</textarea>
+                                <textarea name="" id="" cols="40" rows="1" placeholder="图片覆盖层描述信息" readonly="readonly">{$v.desc}</textarea>
                             </td>
                             <td align="center" valign="middle" id="ban{$v.id}">{if condition='($v.is_show==1)'}首页展示{else /}首页禁用{/if}</td>
                             <td class="col-md-4">
                                 <!--<button class=" btn-info btn-sm" data-toggle="modal" data-target="#myModal">查看大图</button>-->
-                                <a class=" btn btn-info btn-sm" data-toggle="modal" data-target="#myModal2" href="{:url('admin/carousel/update',['id'=>$v['id']])}">编辑</a>
+                                <button class=" btn btn-info btn-sm find-btn" show-id='{$v.id}' data-toggle="modal" data-target="#myModal2" >编辑</button>
                                 <button class=" btn btn-success use-btn btn-sm" use-id="{$v.id}">使用</button>
                                 <button class=" btn btn-warning bin-btn btn-sm" bin-id="{$v.id}">禁用</button>
                                 <button class=" btn btn-danger del-btn btn-sm" del-id="{$v.id}" >删除</button>
@@ -88,7 +88,7 @@
             <!--</div>-->
             <div class="modal-body" style="padding:0px">
                 <!--<div class="form-group">-->
-                    <img src="/uploads/{$v.pic}" width="600px">
+                    <img src="" width="600px" class="showimg">
                 <!--</div>-->
             </div>
         </div>
@@ -130,16 +130,16 @@
                 <h4 class="modal-title" id="myModalLabel2">编辑图片</h4>
             </div>
             <div class="modal-body">
-                <form action="{:url('/carouselupd/'.$v.id)}" method="post" enctype="multipart/form-data">
+                <form action="" class="formedit" method="post" enctype="multipart/form-data">
                     <div class="form-group">
-                        <label>原图:</label><br><img src="/uploads/{$v.pic}" width="450px"><br>
+                        <label>原图:</label><br><img class='showimg' src="" width="450px"><br>
                         <label >描述:</label><br>
-                        <input type="text" name="desc" class="form-control" value="{$v.desc}" >
+                        <input type="text" name="desc" class="form-control desc" value="" >
                         <br>请添加图片:<input type="file" name="pic" id="exampleInputFile">
                     </div>
                     <div class="form-group">
                         <label >
-                            <input type="checkbox" name="is_show" checked> 首页展示
+                            <input type="checkbox" name="is_show" class="input"> 首页展示
                         </label>
                     </div>
                     <button type="submit" class="btn btn-success btn-lg">提交</button>
@@ -148,6 +148,7 @@
         </div>
     </div>
 </div>
+
 
 <!-- main content end-->
 {/block}
@@ -176,6 +177,12 @@
 
 <script>
     $(function () {
+        //查看 编辑
+        $('.find-btn').click(function () {
+            var id = $(this).attr('show-id');
+            //console.log(id);
+            findAjax(id);
+        });
         //触发禁用操作
         $('.bin-btn').click(function () {
             var id = $(this).attr('bin-id');
@@ -215,7 +222,7 @@
     toastr.options = {
         closeButton: true,
         progressBar: true,
-        timeOut: "3000",
+        timeOut: "1000",
         positionClass: "toast-top-full-width"
     };
     // 执行AJAX
@@ -281,37 +288,40 @@
         });
     }
 
-    //    // 执行AJAX查询单条数据
-    //    function showAjax(id) {
-    //        $.ajax({
-    //            type: 'get',
-    //            url: '/users/' + id,
-    //            dataType: 'json',
-    //            async: false,
-    //            success: function (data) {
-    //                console.log(data);
-    //                // 遍历模态框
-    //                if (data.status) {
-    //                    // 标题填充
-    //                    $('.modal-title u').html(data.title);
-    //                    // 填充内容信息
-    //                    var msg = data.datas.id + '/' + data.datas.name + '/' + data.datas.province;
-    //                    $('.modal-body h3').html(msg);
-    //                } else {
-    //                    $('.modal-title u').html(data.title);
-    //                    $('.modal-body h3').html(data.datas);
-    //                }
-    //
-    //            },
-    //            error: function () {
-    //                // AJAX操作失败
-    //                alert('AJAX操作失败');
-    //            }
-    //        });
-    //    }
-    //
+        // 执行AJAX查询单条数据
+        function findAjax(id) {
+            $.ajax({
+                type: 'get',
+                url: '/carouselfind/' + id,
+                dataType: 'json',
+                async: false,
+                success: function (data) {
+                    //console.log(data);
+                    // 遍历模态框
+                    if (data.status) {
+                        // 图片填充
+                        $('.showimg').attr('src','/uploads/'+data.pic);
+                        $('.desc').attr('value',data.desc);
+
+                        $('.formedit').attr('action','/carouselupd/'+data.id);
+                        if (data.is_show){
+                            console.log(data.is_show);
+                            $('.input').attr('checked','true');
+                        }
+                    } else {
+                        alert('数据可能丢失了~~~~');
+                    }
+
+                },
+                error: function () {
+                    // AJAX操作失败
+                    alert('AJAX操作失败');
+                }
+            });
 
 
+
+}
 
 
 </script>
