--- a/application/index/view/bus/index.html
+++ b/application/index/view/bus/index.html
@@ -120,30 +120,31 @@
         <!-- Page 2 Gallery One -->
         <li>
             <div class="cd-full-width">
-                <div class="container-fluid js-tm-page-content" data-page-no="2" data-page-type="gallery">
+                <div class="container-fluid js-tm-page-content" data-page-no="2" data-page-type="gallery" >
 
-                    <div class="tm-img-gallery-container">
+                    <div class="tm-img-gallery-container tm-img-gallery-container-3">
                         {volist name="ticket" id="vt" key='k'}
                         {if condition='!empty($vt)'}
-                        <div class="tm-img-gallery gallery-one">
+                        {volist name="vt" id="v"}
+                        <div class="tm-img-gallery gallery-one" style="margin-top: 30px">
                             <!-- Gallery One pop up connected with JS code below -->
                             <div class="tm-img-gallery-info-container">
                                 <h2 class="tm-text-title tm-gallery-title tm-white"><span class="tm-white">{$cate[$k-1]}</span></h2>
                             </div>
-                            {volist name="vt" id="v"}
                             <div class="grid-item">
                                 <figure class="effect-ruby">
-                                    <a href="#"><img  src="/uploads/{$v.pic}" alt="Image" class="img-fluid tm-img " style="height:420px"></a>
+                                    <a href="#"><img  src="/uploads/{$v.pic}" alt="Image" class="img-fluid tm-img " style="height:420px;width:320px"></a>
                                     <figcaption>
                                         <h2 class="tm-figure-title">{$v.gd_title}</span></h2>
                                         <p class="tm-figure-description">{$v.gd_abstract}</p>
-                                        <!--<a href="/uploads/{$v.pic}">点击查看详情</a>-->
-                                        <a href="{:url('index/goodsInfo/detail',['id'=>$v.id,'c_id'=>'1'])}"><a href="/uploads/{$v.pic}">点击查看详情</a></a>
+                                        <a href="/uploads/{$v.pic}">点击查看详情</a>
                                     </figcaption>
                                 </figure>
+
                             </div>
-                            {/volist}
                         </div>
+                        <div style="padding:10px;width: 320px;text-align: center;margin-bottom: 20px"><a href="{:url('/goodsdetail',['id'=>$v.gid,'bus_id'=>$b_id,'cid'=>'1'])}">点击查看详情>>></a></div>
+                        {/volist}
                         {/if}
                         {/volist}
                     </div>
@@ -154,20 +155,20 @@
 
         <!-- Page 3 Gallery Two -->
         <li>
-            <div class="cd-full-width">
+            <div class="cd-full-width" style="margin-top: 80px">
                 <div class="container-fluid js-tm-page-content" data-page-no="3" data-page-type="gallery">
+                    <div class="tm-img-gallery-container tm-img-gallery-container-3">
                     {volist name="food" id="vf" key='k'}
                     {if condition='!empty($vf)'}
-                    <div class="tm-img-gallery-container tm-img-gallery-container-2">
-                        <div class="tm-img-gallery gallery-two">
+                    <div class="tm-img-gallery-info-container">
+                        <h2 class="tm-text-title tm-gallery-title"><span class="tm-white">{$cate_f[$k-1]}</span></h2>
+                    </div>
+                    {volist name="vf" id="v"}
+                        <div class="tm-img-gallery gallery-three">
                             <!-- Gallery Two pop up connected with JS code below -->
-                            <div class="tm-img-gallery-info-container">
-                                <h2 class="tm-text-title tm-gallery-title"><span class="tm-white">{$cate_f[$k-1]}</span></h2>
-                            </div>
-                            {volist name="vf" id="v"}
                             <div class="grid-item">
                                 <figure class="effect-ruby">
-                                    <a href=""><img src="/uploads/{$v.pic}" alt="Image" class="img-fluid tm-img" height="300px" ></a>
+                                    <a href=""><img src="/uploads/{$v.pic}" alt="Image" class="img-fluid tm-img" style="height:420px;width:320px" ></a>
                                     <figcaption>
                                         <h2 class="tm-figure-title">{$v.gd_title}</span></h2>
                                         <p class="tm-figure-description">{$v.gd_abstract}</p>
@@ -175,9 +176,10 @@
                                     </figcaption>
                                 </figure>
                             </div>
-                            {/volist}
                         </div>
                     </div>
+                    <div style="padding:10px;width: 320px;text-align: center;margin-bottom: 20px"><a href="{:url('/goodsdetail',['id'=>$v.gid,'bus_id'=>$b_id,'cid'=>'6'])}">点击查看详情>>></a></div>
+                    {/volist}
                     {/if}
                     {/volist}
                 </div>
@@ -191,24 +193,27 @@
                     <div class="tm-img-gallery-container tm-img-gallery-container-3">
                         {volist name="route" id="vr" key='k'}
                         {if condition='!empty($vr)'}
+                        <div class="tm-img-gallery-info-container">
+                            <h2 class="tm-text-title tm-gallery-title"><span class="tm-white">{$cate_r[$k-1]}</span></h2>
+                        </div>
+                        {volist name="vr" id="r1"}
                         <div class="tm-img-gallery gallery-three">
                             <!-- Gallery Two pop up connected with JS code below -->
-                            <div class="tm-img-gallery-info-container">
-                                <h2 class="tm-text-title tm-gallery-title"><span class="tm-white">{$cate_r[$k-1]}</span></h2>
-                            </div>
-                            {volist name="vr" id="r1"}
+
                             <div class="grid-item">
                                 <figure class="effect-ruby">
-                                    <img src="/uploads/{$r1.pic}" alt="Image" class="img-fluid tm-img" height="400px">
+                                    <a href=""><img src="/uploads/{$r1.pic}" alt="Image" class="img-fluid tm-img" height="400px"></a>
                                     <figcaption>
-                                        <h2 class="tm-figure-title">{$r1.gd_title}</h2>
+                                        <h2 class="tm-figure-title"><a href="{:url('/goodsdetail',['id'=>$r1.gid,'bus_id'=>$r1.bus_id,'cid'=>$r1.c_id])}">{$r1.gd_title}</a></h2>
                                         <p class="tm-figure-description">{$r1.gd_abstract}</p>
                                         <a href="/uploads/{$r1.pic}">View more</a>
                                     </figcaption>
                                 </figure>
                             </div>
-                            {/volist}
+
                         </div>
+                        <div style="padding:10px;width: 627px;text-align: center;margin-bottom: 20px"><a href="{:url('/goodsdetail',['id'=>$r1.gid,'bus_id'=>$b_id,'cid'=>'5'])}">点击查看详情>>></a></div>
+                        {/volist}
                         {/if}
                         {/volist}
                     </div>
@@ -216,39 +221,39 @@
             </div>
         </li>
 
-
         <!-- Page 5 About -->
         <li>
             <div class="cd-full-width">
-                <div class="container-fluid js-tm-page-content tm-page-width" data-page-no="5">
-                    <div class="row">
-                        <div class="col-xs-12">
-                            <div class="tm-flex">
-                                <div class="tm-bg-white-translucent text-xs-left tm-textbox tm-textbox-padding tm-white-box-margin-b">
-                                    <h2 class="tm-text-title">Lorem ipsum dolor</h2>
-                                    <p class="tm-text">Nulla efficitur, ligula et imperdiet volutpat, lacus tortor tempus massa, eget tempus quam nibh vel nulla. Vivamus non molestie leo, non tincidunt diam. Mauris sagittis elit in velit ultricies aliquet sed in magna. Pellentesque semper, est nec consequat viverra, sem augue tincidunt nisi, a posuere nisi sapien sed sapien. Nulla facilisi.</p>
-                                </div>
-                            </div>
+                <div class="container-fluid js-tm-page-content" data-page-no="4" data-page-type="gallery">
+                    <div class="tm-img-gallery-container tm-img-gallery-container-3">
+                        {volist name="activities" id="va" key='k'}
+                        {if condition='!empty($va)'}
+                        <div class="tm-img-gallery-info-container">
+                            <h2 class="tm-text-title tm-gallery-title"><span class="tm-white">{$cate_a[$k-1]}</span></h2>
                         </div>
-                    </div>
+                        {volist name="va" id="r1"}
+                        <div class="tm-img-gallery gallery-three">
+                            <!-- Gallery Two pop up connected with JS code below -->
 
-                    <div class="row">
-                        <div class="col-xs-12">
-                            <div class="tm-flex">
-                                <div class="tm-bg-white-translucent text-xs-left tm-textbox tm-2-col-textbox-2 tm-textbox-padding">
-                                    <h2 class="tm-text-title">Nulla facilisi</h2>
-                                    <p class="tm-text">Donec vitae bibendum est, et ultrices urna. Curabitur ac bibendum augue, a convallis mi. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Sed ultrices placerat arcu.</p>
-                                </div>
-                                <div class="tm-bg-white-translucent text-xs-left tm-textbox tm-2-col-textbox-2 tm-textbox-padding">
-                                    <h2 class="tm-text-title">Aliquam sem sem</h2>
-                                    <p class="tm-text">Proin sagittis mauris dolor, vel efficitur lectus dictum nec. Sed ultrices placerat arcu, id malesuada metus cursus suscipit. Donex quis consectetur ligula. Proin accumsan eros id nisi porttitor, a facilisis quam cursus.</p>
-                                </div>
+                            <div class="grid-item">
+                                <figure class="effect-ruby">
+                                    <a href=""><img src="/uploads/{$r1.pic}" alt="Image" class="img-fluid tm-img" height="400px"></a>
+                                <figcaption>
+                                <h2 class="tm-figure-title"><a href="{:url('/activitiesdetailsshow',['id'=>$r1.acid])}">{$r1.ac_title}</a></h2>
+                                <p class="tm-figure-description">{$r1.ac_abstract}</p>
+                                    <a href="/uploads/{$r1.pic}">View more</a>
+                                </figcaption>
+                                </figure>
                             </div>
+
                         </div>
+                        <div style="padding:10px;width: 627px;text-align: center;margin-bottom: 20px"><a href="{:url('/activitiesdetailsshow',['id'=>$r1.acid])}">点击查看详情>>></a></div>
+                        {/volist}
+                        {/if}
+                        {/volist}
                     </div>
                 </div>
-            </div> <!-- .cd-full-width -->
-
+            </div>
         </li>
 
         <!-- Page 6 Contact Us -->
@@ -258,13 +263,13 @@
                     <div class="tm-img-gallery-container tm-img-gallery-container-3">
                         {volist name="hotel" id="vh" key='k'}
                         {if condition='!empty($vh)'}
+                        <div class="tm-img-gallery-info-container">
+                            <h2 class="tm-text-title tm-gallery-title"><span class="tm-white">{$cate_h[$k-1]}</span></h2>
+                        </div>
+                        {volist name="vh" id="h1"}
                         <div class="tm-img-gallery gallery-three">
                             <!-- Gallery Two pop up connected with JS code below -->
-                            <div class="tm-img-gallery-info-container">
-                                <h2 class="tm-text-title tm-gallery-title"><span class="tm-white">{$cate_h[$k-1]}</span></h2>
-                            </div>
-                            {volist name="vh" id="h1"}
-                            <div class="grid-item">
+                            <div class="grid-item" >
                                 <figure class="effect-ruby">
                                     <img src="/uploads/{$h1.pic}" alt="Image" class="img-fluid tm-img" width='500px' height="400px" style="'margin-left:10px">
                                     <figcaption>
@@ -274,8 +279,10 @@
                                     </figcaption>
                                 </figure>
                             </div>
-                            {/volist}
+
                         </div>
+                        <div style="padding:10px;width: 500px;text-align: center;margin-bottom: 20px"><a href="{:url('/goodsdetail',['id'=>$v.gid,'bus_id'=>$b_id,'cid'=>'4'])}">点击查看详情>>></a></div>
+                        {/volist}
                         {/if}
                         {/volist}
                     </div>
