--- a/application/admin/view/activities/ActivitiesAdminListDatails.html
+++ b/application/admin/view/activities/ActivitiesAdminListDatails.html
@@ -49,8 +49,10 @@
                             <th align="center" valign="middle">活动类型</th>
                             <th align="center" valign="middle">活动细节</th>
                             <th align="center" valign="middle">活动价格</th>
-                            <th align="center" valign="middle">活动状态</th>
+                           
                             <th align="center" valign="middle">活动人数</th>
+                            <th align="center" valign="middle">活动热线</th>
+                            <th align="center" valign="middle">活动状态</th>
                             <!-- <th align="center" valign="middle">操作</th> -->
                         </tr>
                         </thead>
@@ -66,8 +68,9 @@
                             <td align="center" >{$data.ac_cate}</td>
                             <td align="center" >{$data.ac_details}</td>
                             <td align="center" >{$data.ac_price}</td>
-                            <td align="center" >{$data.ac_status}</td>
                             <td align="center" >{$data.ac_contain}</td>
+                            <td align="center" >{$data.ac_contact}</td>
+                            <td align="center" >{if condition="$data.ac_status eq 1" }上架{else /}下架{/if}</td>
                             <!-- <td>
                                 <button  class=" btn-primary btn-lg" data-toggle="modal" data-target="#myModal">编辑活动</button>
                             </td> -->
@@ -132,14 +135,20 @@
                             <label for="exampleInputPassword1">活动价格</label>
                             <input type="text" name="ac_price" class="form-control" id="exampleInputPassword1" value="{$data.ac_price}">
                         </div>
-                        <div class="form-group">
-                            <label for="exampleInputPassword1">活动状态</label>
-                            <input type="text" name="ac_status" class="form-control" id="exampleInputPassword1" value="{$data.ac_status}">
-                        </div>
 
                         <div class="form-group">
                             <label for="exampleInputPassword1">活动人数</label>
                             <input type="text" name="ac_contain" class="form-control" id="exampleInputPassword1" value="{$data.ac_contain}">
+                        </div>
+
+                        <div class="form-group">
+                            <label for="exampleInputPassword1">活动热线</label>
+                            <input type="text" name="ac_contact" class="form-control" id="exampleInputPassword1" value="{$data.ac_contact}">
+                        </div>
+
+                        <div class="form-group">
+                            <label for="exampleInputPassword1">活动状态</label>
+                            <input type="text" name="ac_status" class="form-control" id="exampleInputPassword1" value="{$data.ac_status}">
                         </div>
                         <button type="submit" class="btn btn-default">提交</button>
                     </form>
