--- a/application/admin/view/activities/ActivitiesBusList.html
+++ b/application/admin/view/activities/ActivitiesBusList.html
@@ -107,11 +107,11 @@
 
                         <div class="form-group">
                             <label for="exampleInputEmail1">活动开始时间</label>
-                            <input type="datetime-local" name="ac_opentime" class="form-control" id="exampleInputEmail1" placeholder="请输入活动开始时间">
+                            <input type="date" name="ac_opentime" class="form-control" id="exampleInputEmail1" placeholder="请输入活动开始时间">
                         </div>
                         <div class="form-group">
                             <label for="exampleInputEmail1">活动结束时间</label>
-                            <input type="datetime-local" name="ac_closetime" class="form-control" id="exampleInputEmail1" placeholder="请输入活动结束时间">
+                            <input type="date" name="ac_closetime" class="form-control" id="exampleInputEmail1" placeholder="请输入活动结束时间">
                         </div>
 
                          <div class="form-group">
@@ -136,6 +136,11 @@
                         <div class="form-group">
                             <label for="exampleInputPassword1">活动详情介绍</label>
                             <input type="text" name="ac_details" class="form-control" id="exampleInputPassword1" placeholder="请输入活动详情介绍">
+                        </div>
+
+                        <div class="form-group">
+                            <label for="exampleInputPassword1">活动咨询热线</label>
+                            <input type="text" name="ac_contact" class="form-control" id="exampleInputPassword1" placeholder="请输入活动咨询热线">
                         </div>
 
                          <div class="form-group">
