--- a/application/admin/view/activities/ActivitiesBusListDatails.html
+++ b/application/admin/view/activities/ActivitiesBusListDatails.html
@@ -49,8 +49,10 @@
                             <th align="center" valign="middle">活动类型</th>
                             <th align="center" valign="middle">活动细节</th>
                             <th align="center" valign="middle">活动价格</th>
-                            <th align="center" valign="middle">活动状态</th>
                             <th align="center" valign="middle">活动人数</th>
+                            <th align="center" valign="middle">活动热线</th>
+                            <th align="center" valign="middle">活动状态</th>
+                            
                             <th align="center" valign="middle">操作</th>
                         </tr>
                         </thead>
@@ -66,9 +68,13 @@
                             <td align="center" >{$data.ac_cate}</td>
                             <td align="center" >{$data.ac_details}</td>
                             <td align="center" >{$data.ac_price}</td>
-                            <td align="center" >{$data.ac_status}</td>
                             <td align="center" >{$data.ac_contain}</td>
-
+                            <td align="center" >{$data.ac_contact}</td>
+                             <td align="center" >
+                            {if condition="$data.ac_status eq 1"}上架状态 
+                             {else /} 下架状态
+                            {/if}
+                            </td>
                             <td>
                                 <button  class=" btn-primary btn-lg" data-toggle="modal" data-target="#myModal">编辑活动</button>
                             </td>
@@ -104,12 +110,12 @@
                         </div>
                         <div class="form-group">
                             <label for="exampleInputPassword1">活动开始时间</label>
-                            <input type="datetime-local" name="ac_opentime" class="form-control" id="exampleInputPassword1" value="{$data.ac_opentime}">
+                            <input type="date" name="ac_opentime" class="form-control" id="exampleInputPassword1" value="{$data.ac_opentime}">
                         </div>
 
                         <div class="form-group">
                             <label for="exampleInputPassword1">活动结束时间</label>
-                            <input type="datetime-local" name="ac_closetime" class="form-control" id="exampleInputPassword1" value="{$data.ac_closetime}">
+                            <input type="date" name="ac_closetime" class="form-control" id="exampleInputPassword1" value="{$data.ac_closetime}">
                         </div>
 
                         <div class="form-group">
@@ -145,11 +151,14 @@
                         </div>
 
                         <div class="form-group">
-                            <label for="exampleInputPassword1">活动状态</label>
-                            <span><input type="checkbox" name="ac_status" {if condition="$data.ac_status eq 1" }checked{/if}> 是否生效</span>
+                            <label for="exampleInputPassword1">活动热线</label>
+                            <input type="text" name="ac_contact" class="form-control" id="exampleInputPassword1" value="{$data.ac_contact}">
                         </div>
 
-
+                        <div class="form-group">
+                            <label for="exampleInputPassword1">活动状态</label>
+                            <span><input type="checkbox" name="ac_status" {if condition="$data.ac_status eq 1" }checked{/if}> 是否上线</span>
+                        </div>
 
                         <button type="submit" class="btn btn-default">提交</button>
                     </form>
