--- a/application/admin/view/order/mUnDiliver.html
+++ b/application/admin/view/order/mUnDiliver.html
@@ -13,7 +13,7 @@
         <!--<li>-->
             <!--<a href="#">Data Table</a>-->
         <!--</li>-->
-        <li class="active">未发货订单详情</li>
+        <li class="active">未发货订单</li>
     </ul>
 </div>
 <!--body wrapper start-->
