--- a/application/index/view/index/index.html
+++ b/application/index/view/index/index.html
@@ -842,13 +842,11 @@
               </figure>
               <div class="gt_gallery_style1_des">
                 <ul>
-<<<<<<< HEAD
-                  <li><a href="{:url('/activitiesdetailsshow',['id'=>$v.id])}"><i class="fa fa-link"></i></a></li>
+
+                  <li><a href="{:url('/activitiesdetailsshow',['id'=>$v.activities_id])}"><i class="fa fa-link"></i></a></li>
                   <li><a href="/uploads/{$v['pic']}" data-rel="prettyPhoto"><i class="fa fa-search"></i></a></li>
-=======
-                  <li><a href="{:url('/activitiesdetailsshow/'.$v.activities_id)}"><i class="fa fa-link"></i></a></li>
-                  <li><a href="/uploads/{$v['pic']}" data-rel="prettyPhoto"><i class="glyphicon glyphicon-eye-open"></i></a></li>
->>>>>>> origin/zhangsan
+
+
                 </ul>
                 <h3>{$v['ac_title']}</h3>
               </div>
