--- a/application/index/view/index/sceneryDetail.html
+++ b/application/index/view/index/sceneryDetail.html
@@ -1,7 +1,11 @@
 ﻿{extend name="index/index"}
 
     
-{block name="main"}    <!--Sub Banner Wrap Start -->
+{block name="main"}
+<style type="text/css">
+    #big{width:200px;height:200px;margin-left:100px;margin-top:10px;overflow:hidden;position:absolute;top:70px;left:350px;display:none;z-index:99}
+</style>
+<!--Sub Banner Wrap Start -->
     <div class="gt_sub_banner_bg default_width">
         <div class="container">
             <div class="gt_sub_banner_hdg  default_width">
@@ -52,11 +56,14 @@
                                       <li>
                                           {volist name="photos" id="p"}
                                           {if condition='$p.is_first eq 1'}
-                                          <img src="/uploads/{$p.pic}" width="421" height="470" />
+                                          <img src="/uploads/{$p.pic}" width="421" height="470" id="small"/>
                                           {/if}
                                           {/volist}
                                       </li>
                                   </ul>
+                                  <div id="big">
+                                      <img src="/uploads/{$p.pic}" width="2000"/>
+                                  </div>
                               </div>
                           </div>
                       </div>
@@ -321,5 +328,21 @@
 //        console.log($('#num').val());
     });
 
+</script>
+<script>
+    var big = document.getElementById('big');
+    var small = document.getElementById('small');
+
+    small.onmousemove = function(e){
+        var x = e.clientX - this.offsetLeft;
+        var y = e.clientY - this.offsetTop;
+        big.scrollTop = y * 5 - 570;
+        big.scrollLeft = x * 5 - 1400;
+        big.style.display = 'block';
+    }
+
+    small.onmouseout = function(){
+        big.style.display = 'none';
+    }
 </script>
 {/block}
